gcc/testsuite/g++.dg/cpp0x/initlist76.C
// PR c++/58812
// { dg-require-effective-target c++11 }

int i;
int&& j{{ i }};			// { dg-error "too many braces" }
